# YoPagoCL

./: README.md
backend/: .gitignore  README.md  alembic.ini  create_restaurant_table.py  create_session_qr.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05f08a87555b_.py  513755080e26_.py  818a30796993_.py  95233890d325_.py  add_avatar_url_to_users.py  c1fe20deaa02_.py  d8d987484770_.py  df76f49cc9c4_add_locked_fields_to_table_sessions.py  e709f18c45e6_.py
backend/api/: deps.py
backend/api/routers/: auth.py  groups.py  invoices.py  reminders.py  settlements.py  table_sessions.py  v1_router.py  wallets.py  websocket.py
backend/api/websocket/: manager.py  table_sessions.py
backend/core/: config.py  oauth.py  security.py
backend/crud/: auth.py  groups.py  invoices.py  item_assignments.py  order_items.py  reminders.py  settlements.py  table_participants.py  table_sessions.py  wallets.py
backend/db/: session.py
backend/models/: __init__.py  group_members.py  groups.py  invoice_items.py  invoices.py  item_assignments.py  order_items.py  payment_reminders.py  payments.py  restaurant_tables.py  restaurants.py  settlements.py  table_participants.py  table_sessions.py  users.py  wallet_transactions.py  wallets.py
backend/schemas/: auth.py  groups.py  invoices.py  reminders.py  settlements.py  table_sessions.py  wallets.py  websocket.py
frontend/: .gitignore  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  groups.tsx  index.tsx  invoices.tsx  login.tsx  register.tsx  reminders.tsx  settlements.tsx
(+15 files in other folders)
