[project]
name = "yopagocl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "sqlmodel>=0.0.27",
    "pydantic-settings>=2.11.0",
    "authlib>=1.6.5",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "jwt>=1.4.0",
    "itsdangerous>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
]
